appId: com.streamentry.linepay
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible:
      id: onboarding.set-up-pay
    timeout: 30000
- takeScreenshot: welcome
- tapOn:
    id: onboarding.set-up-pay
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      id: pay-profile.continue
    timeout: 60000
- waitForAnimationToEnd
- tapOn:
    id: pay-profile.continue
- waitForAnimationToEnd
- assertVisible:
    id: pay-profile.continue
- takeScreenshot: invalid-pay-rules
- scrollUntilVisible:
    element:
      id: pay-profile.hourly-rate
    direction: UP
    timeout: 60000
- waitForAnimationToEnd
- tapOn:
    id: pay-profile.hourly-rate
- waitForAnimationToEnd
- inputText: "58.40"
- assertVisible:
    id: keyboard.done
- takeScreenshot: pay-setup-keyboard
- tapOn:
    id: keyboard.done
- waitForAnimationToEnd
- runFlow: confirm-rules.yaml
- scrollUntilVisible:
    element:
      id: activation.skip-work
    timeout: 60000
- waitForAnimationToEnd
- assertVisible:
    id: activation.skip-work
- tapOn:
    id: activation.skip-work
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      id: today.add-work
    timeout: 60000
- waitForAnimationToEnd
- assertVisible:
    id: today.add-work
